@@ -8,27 +8,40 @@ wordflag="";
 caseflag="";
 stringtofind="";
 errormessage="";
+nogit="-path *.git -prune -o";
+fileflag="";
 
 while [ $# -gt 0 ]
 do
   case "$1" in
-    -w) wordflag="-w"; shift;;
-    -i) caseflag="-i"; shift;;
+    -w) wordflag="-w";;
+    -i) caseflag="-i";;
+    -filename) fileflag="-name $2";  shift;;
+    -git) nogit="";;
+	--)	shift; break;;
 	 *) if [ -z "$stringtofind" ] 
         then 
-          stringtofind=$1; 
-          shift; 
+          stringtofind=$1;          
         else  
           errormessage="Argument $1 not recognized.";
           break; 
         fi; 	
+      ;;
   esac
+  shift
 done
+
+#echo "fileflag=$fileflag";
+
+if [ -z "$stringtofind" ]; then
+  errormessage="$errormessage A string to be searched was not provided within the arguments."
+fi
 
 if [ -z "$errormessage" ] && [ ! -z "$stringtofind" ]
 then {
-  echo "Searching for string" \'$stringtofind\' "...";
-  for i in `find . -path './dev' -prune -o -print 2> /dev/null`
+  echo "Searching for string '$stringtofind' ...";
+#  for i in `find . -path './dev' -prune -o -print 2> /dev/null`
+  for i in `find . $nogit -type f $fileflag -print 2> /dev/null`
   do {
     fgrep $caseflag $wordflag "$stringtofind" $i > /dev/null 2>&1;
     if [ $? = 0 ]
@@ -37,13 +50,34 @@ then {
     } fi;
   } done;
 } else {
-  echo ""
-  echo "Wrong number of arguments. $errormessage"
-  echo ""
-  echo "FLAGS:"
-  echo "-w specifies that the string must be delimited by word boundaries."
-  echo "-i specifies that the string searched is not case sensitive."  
-  echo ""
-  echo "Eg: search.sh -w -i stringtosearch"
+  echo "
+Wrong number of arguments. $errormessage
+
+
+FLAG           ARGUMENT                                      Required?
+------------------------------------------------------------------------
+-filename      '*.c' or '*Makefile' or '*.wrp' or '.config'  N 
+-git           No argument. If set, will include files       N
+               within .git directories.
+-w             No argument. If set, will only replace the    N
+               string if it is a word.
+-i             No argument. If set, will do a case           N
+               insensitive search.
+
+
+EXAMPLES
+ 
+$0 -w 'John' -filename '*.c'
+will search within all *.c files recursively for the word John and write out the name of the files that contain such a word
+
+$0 -i -git 'John' 
+will search within all files including those within .git directories recursively for the string John (case insensitive) and write out the name of the files that contain such a string
+
+
+SPECIAL CHARACTERS
+
+  ! must be escaped as \!
+  ' must be written as '\''  or as '\"'\"'
+";
 } fi;
 
